<resources>
    <string name="app_name">Arnica</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_service">Unknown service</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Welocme">Welcome</string>
    <string name="do_you">Do you have a hearing aid?</string>
    <string name="yes_connect">Yes, connect now</string>
    <string name="no_demo">No, take me to demo mode</string>
    <string name="no_demo2">take me to demo mode</string>
    <string name="Enable">Enable Now</string>
    <string name="about_app">Earanica Remote App enables you to change your program and adjust volume, noise level and equalization for your Bluetooth compatible hearing aid.</string>
    <string name="enable_blu">Please enable Bluetooth to connect to your hearing  aid.</string>
    <string name="enable_loc">Location Services have to be enabled to connect to your hearing aid.</string>
    <string name="title_activity_slide">SlideActivity</string>
    <string name="follow">Follow the guides to restart your hearing aid:</string>
    <string name="getconnect">Getting connected</string>
    <string name="open">1.Open the battery door in your hearing aid.</string>
    <string name="close">2.Close the battery door in your hearing aid.</string>
    <string name="cont">Continue</string>
    <string name="searching">Searching....</string>
    <string name="look">Looking for your hearing aid</string>
    <string name="device">Devices:</string>
    <string name="tryagain">Try again</string>
    <string name="pairing">Pairing your hearing aids..</string>
    <string name="startpair">Start pairing</string>
    <string name="noisereduct">Noise Reduction</string>
    <string name="sounden">Sound Enhancer</string>
    <string name="home">Home</string>
    <string name="status">Status</string>
    <string name="Myapp">Myapp</string>
    <string name="More">More</string>
    <string name="use">You are Using Demo Mode</string>
    <string name="noisesetting">Noise Reduction Settings</string>
    <string name="soundsetting">Sound Enhancer Settings</string>
    <string name="OFF">OFF</string>
    <string name="Mild">Mild</string>
    <string name="Moderate">Moderate</string>
    <string name="Considerable">Strong</string>
    <string name="Strong">Very Strong</string>
    <string name="Bass">Bass</string>
    <string name="Middle">Middle</string>
    <string name="Treble">Treble</string>
    <string name="Morespeech">More speech</string>
    <string name="Moreclarity">More clarity</string>
    <string name="Lesssharp">Less sharp</string>
    <string name="Lessecho">Less echo</string>
    <string name="reset">Reset</string>
    <string name="APPLICATION">APPLICATION</string>
    <string name="ExitDemomode">Exit Demo mode</string>
    <string name="Guidingtips">Guiding tips</string>
    <string name="Switchmode">Switch Theme</string>
    <string name="Auto">Exit</string>
    <string name="GENERAL">GENERAL</string>
    <string name="About">About</string>
    <string name="Legal">Legal information</string>
    <string name="Support">Support</string>
    <string name="HEARINGAID">HEARING AID</string>
    <string name="find">find my hearing aid</string>
    <string name="Tap">Tap Control</string>
    <string name="LEARNING">LEARNING</string>
    <string name="Learn">Learn about the app</string>
    <string name="CARE">ARNICA REMOTE CARE</string>
    <string name="Rate">Rate my sound</string>
    <string name="Request">Request assistance</string>
    <string name="requests">My requests and new settings</string>
    <string name="updates">Hearing aid software updates</string>
    <string name="notfound">No hearing aid detected..</string>
    <string name="make1">Make sure the hearing aid is turned on and has fresh battery.</string>
    <string name="make2">Make sure the hearing aid is not connected to another device.</string>
    <string name="devname">Device Name:</string>
    <string name="pairing2">Pairing..</string>
    <string name="pairing3">Pairing Completed!</string>
    <string name="Exitapp">Do You Want to Exit?</string>
    <string name="ExitBLE">Exit BLE connection?</string>
    <string name="sure">If you exit, the connection will be disconnected. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
</resources>

