<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">
    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use"
        android:textAlignment="center"
        android:textColor="@color/arnica4"
        android:background="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noisesetting"
        android:textAlignment="center"
        android:layout_below="@id/textView8"
        android:textColor="@color/font"
        android:layout_marginBottom="30dp"
        android:textSize="30sp"

        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/arnica4"
        android:layout_below="@id/label"
        android:gravity="center"
        android:text="@string/Mild"
        android:textSize="36dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textView1"
        android:orientation="vertical">

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layoutDirection="ltr"
            android:layout_weight="1"
            android:thumb="@drawable/thumb_custom"
            android:max="4"
            android:min="0"

            android:progress="1"
            android:progressTint="@color/arnica4"
            android:rotation="270"
            android:thumbTint="@color/arnica4" />

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/arnica8"
            android:text="@string/reset"
            android:textSize="20dp"
            android:textColor="@color/font"
            android:layout_alignParentBottom="true"/>
        <!--android:drawableTop="@drawable/baseline_restart_alt_24"-->

    </LinearLayout>


</RelativeLayout>
