<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".FirstActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            app:srcCompat="@drawable/download2" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="12sp"
            android:text="@string/enable_blu"
            android:textAlignment="center"
            android:layout_marginTop="50dp"

            android:textColor="@color/font"
            android:textSize="20sp" />
        <Button
            android:id="@+id/Continue3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:insetTop="60dp"
            android:backgroundTint="@color/arnica4"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/Enable"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/demo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:visibility="invisible"
            android:insetTop="20dp"
            android:backgroundTint="@color/arnica4"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/no_demo"/>

    </LinearLayout>
</RelativeLayout>