<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale"
    android:background="@color/background"
    tools:context=".Statuspage">
    <LinearLayout
        android:id="@+id/bottomNavigationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/arnica8"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/homeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="10sp"
                android:textColor="@color/font"
                android:drawableTop="@drawable/baseline_home_24"
                android:backgroundTint="@color/arnica8" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/statusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/arnica8"
                android:drawableTop="@drawable/baseline_hearing_24"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/status"
                android:textColor="@color/arnica4"
                android:drawableTint="@color/arnica4"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/myappButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Myapp"
                android:textSize="10sp"
                android:textColor="@color/font"
                android:drawableTop="@drawable/baseline_contact_support_24"
                android:backgroundTint="@color/arnica8" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/moreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/More"
                android:textSize="10sp"
                android:textColor="@color/font"
                android:drawableTop="@drawable/baseline_more_horiz_24"
                android:backgroundTint="@color/arnica8" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>